--- a/aspnet-core/src/GYISMS.Web.Host/Properties/launchSettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://127.0.0.1:21021/",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:21021/",
       "sslPort": 0
@@ -9,7 +13,7 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "IIS",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
