--- a/aspnet-core/src/GYISMS.Web.Host/appsettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
-    //"Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
+    //"Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
+    "Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
   },
   "App": {
     "ServerRootAddress": "http://127.0.0.1:21021/",
