--- a/aspnet-core/src/GYISMS.Web.Host/GYISMS.Web.Host.csproj
+++ b/aspnet-core/src/GYISMS.Web.Host/GYISMS.Web.Host.csproj
@@ -52,4 +52,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\visit\" />
+  </ItemGroup>
 </Project>
