--- a/aspnet-core/src/GYISMS.Web.Host/appsettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/appsettings.json
@@ -1,31 +1,12 @@
-﻿//{
-//  "ConnectionStrings": {
-//    "Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
-//    //"Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
-//  },
-//  "App": {
-//    "ServerRootAddress": "http://127.0.0.1:21021/",
-//    "ClientRootAddress": "http://localhost:4200/",
-//    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://hechuangdd.vaiwan.com"
-//  },
-//  "Authentication": {
-//    "JwtBearer": {
-//      "IsEnabled": "true",
-//      "SecurityKey": "AbpCoreBasic_C421AAEE0D114E9C",
-//      "Issuer": "AbpCoreBasic",
-//      "Audience": "AbpCoreBasic"
-//    }
-//  }
-//}
-
-{
+﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
+    //"Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
+    "Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
   },
   "App": {
-    "ServerRootAddress": "http://localhost:21021/",
+    "ServerRootAddress": "http://127.0.0.1:21021/",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081"
+    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://hechuangdd.vaiwan.com"
   },
   "Authentication": {
     "JwtBearer": {
