--- a/aspnet-core/src/GYISMS.Web.Host/Properties/launchSettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/Properties/launchSettings.json
@@ -1,40 +1,11 @@
-//{
-//  "iisSettings": {
-//    "windowsAuthentication": false,
-//    "anonymousAuthentication": true,
-//    "iis": {
-//      "applicationUrl": "http://127.0.0.1:21021/",
-//      "sslPort": 0
-//    },
-//    "iisExpress": {
-//      "applicationUrl": "http://localhost:21021/",
-//      "sslPort": 0
-//    }
-//  },
-//  "profiles": {
-//    "IIS Express": {
-//      "commandName": "IIS",
-//      "launchBrowser": true,
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIRONMENT": "Development"
-//      }
-//    },
-//    "GYISMS.Web.Host": {
-//      "commandName": "Project",
-//      "launchBrowser": true,
-//      "launchUrl": "http://localhost:21021",
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIRONMENT": "Development"
-//      },
-//      "applicationUrl": "http://localhost:12021/"
-//    }
-//  }
-//}
-
 {
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://127.0.0.1:21021/",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:21021/",
       "sslPort": 0
@@ -42,7 +13,7 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
+      "commandName": "IIS",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -59,3 +30,4 @@
     }
   }
 }
+
