拜访记录修改

--- a/aspnet-core/src/GYISMS.Web.Host/appsettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/appsettings.json
@@ -6,6 +6,7 @@
   "App": {
     "ServerRootAddress": "http://127.0.0.1:21021/",
     "ClientRootAddress": "http://localhost:4200/",
+    //"CorsOrigins": "*"
     "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://hechuangdd.vaiwan.com,http://yangfan.vaiwan.com,http://dingtalk.com,https://dingtalk.com"
   },
   "Authentication": {
