图片添加水印

--- a/aspnet-core/src/GYISMS.Application/GYISMS.Application.csproj
+++ b/aspnet-core/src/GYISMS.Application/GYISMS.Application.csproj
@@ -9,7 +9,12 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <RootNamespace>GYISMS</RootNamespace>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0004" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0004" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GYISMS.Core\GYISMS.Core.csproj" />
   </ItemGroup>
