--- a/aspnet-core/src/GYISMS.Web.Core/GYISMS.Web.Core.csproj
+++ b/aspnet-core/src/GYISMS.Web.Core/GYISMS.Web.Core.csproj
@@ -14,6 +14,7 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
     <RootNamespace>GYISMS</RootNamespace>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\GYISMS.Application\GYISMS.Application.csproj" />
