--- a/aspnet-core/src/GYISMS.Application/GYISMS.Application.csproj
+++ b/aspnet-core/src/GYISMS.Application/GYISMS.Application.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Abp.Quartz" Version="3.8.1" />
+    <PackageReference Include="DotNetCore.NPOI" Version="1.2.1" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0004" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0004" />
   </ItemGroup>
