--- a/aspnet-core/src/GYISMS.Web.Host/appsettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/appsettings.json
@@ -1,32 +1,14 @@
-﻿//{
-//  "ConnectionStrings": {
-//    //"Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
-//    "Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
-//    //"Default": "Server=119.23.174.202; Database=GYISMSDB;User ID=sa;Password=qaz_123;"
-//  },
-//  "App": {
-//    "ServerRootAddress": "http://127.0.0.1:21021/",
-//    "ClientRootAddress": "http://localhost:4200/",
-//    //"CorsOrigins": "*"
-//    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://hechuangdd.vaiwan.com,http://yangfan.vaiwan.com,http://dingtalk.com,https://dingtalk.com"
-//  },
-//  "Authentication": {
-//    "JwtBearer": {
-//      "IsEnabled": "true",
-//      "SecurityKey": "AbpCoreBasic_C421AAEE0D114E9C",
-//      "Issuer": "AbpCoreBasic",
-//      "Audience": "AbpCoreBasic"
-//    }
-//  }
-//}
-{
+﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
+    //"Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
+    "Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
+    //"Default": "Server=119.23.174.202; Database=GYISMSDB;User ID=sa;Password=qaz_123;"
   },
   "App": {
-    "ServerRootAddress": "http://localhost:21021/",
+    "ServerRootAddress": "http://127.0.0.1:21021/",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081"
+    //"CorsOrigins": "*"
+    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://hechuangdd.vaiwan.com,http://yangfan.vaiwan.com,http://dingtalk.com,https://dingtalk.com"
   },
   "Authentication": {
     "JwtBearer": {
@@ -37,4 +19,22 @@
     }
   }
 }
+//{
+//  "ConnectionStrings": {
+//    "Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
+//  },
+//  "App": {
+//    "ServerRootAddress": "http://localhost:21021/",
+//    "ClientRootAddress": "http://localhost:4200/",
+//    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081"
+//  },
+//  "Authentication": {
+//    "JwtBearer": {
+//      "IsEnabled": "true",
+//      "SecurityKey": "AbpCoreBasic_C421AAEE0D114E9C",
+//      "Issuer": "AbpCoreBasic",
+//      "Audience": "AbpCoreBasic"
+//    }
+//  }
+//}
 
