--- a/aspnet-core/src/GYISMS.Web.Host/appsettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    //"Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
-    "Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
+    "Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
+    //"Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
     //"Default": "Server=119.23.174.202; Database=GYISMSDB;User ID=sa;Password=qaz_123;"
   },
   "App": {
