--- a/aspnet-core/src/GYISMS.Web.Host/appsettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/appsettings.json
@@ -21,7 +21,8 @@
 }
 //{
 //  "ConnectionStrings": {
-//    "Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
+//    "Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;",
+//    //"Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
 //  },
 //  "App": {
 //    "ServerRootAddress": "http://localhost:21021/",
