--- a/ng-admin/angular.json
+++ b/ng-admin/angular.json
@@ -48,18 +48,18 @@
                             "node_modules/abp-web-resources/Abp/Framework/scripts/libs/abp.moment.js",
                             "node_modules/abp-web-resources/Abp/Framework/scripts/libs/abp.sweet-alert.js",
                             "node_modules/abp-web-resources/Abp/Framework/scripts/libs/abp.blockUI.js",
-                            "node_modules/abp-web-resources/Abp/Framework/scripts/libs/abp.spin.js"
-
-
-
+                            "node_modules/abp-web-resources/Abp/Framework/scripts/libs/abp.spin.js",
+                            "node_modules/qrious/dist/qrious.min.js"
                         ]
                     },
                     "configurations": {
                         "production": {
-                            "fileReplacements": [{
-                                "replace": "src/environments/environment.ts",
-                                "with": "src/environments/environment.prod.ts"
-                            }],
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.prod.ts"
+                                }
+                            ],
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": false,
@@ -71,10 +71,12 @@
                             "buildOptimizer": true
                         },
                         "hmr": {
-                            "fileReplacements": [{
-                                "replace": "src/environments/environment.ts",
-                                "with": "src/environments/environment.hmr.ts"
-                            }]
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.hmr.ts"
+                                }
+                            ]
                         }
                     }
                 },
