--- a/aspnet-core/src/GYISMS.Web.Host/wwwroot/gyadmin/assets/appconfig.json
+++ b/aspnet-core/src/GYISMS.Web.Host/wwwroot/gyadmin/assets/appconfig.json
@@ -1,4 +1,4 @@
 {
-  "remoteServiceBaseUrl": "http://localhost:21021",
-  "appBaseUrl": "http://localhost:21021"
+    "remoteServiceBaseUrl": "http://127.0.0.1:21021",
+    "appBaseUrl": "http://gy.intcov.com/"
 }
