--- a/aspnet-core/src/GYISMS.Application/GYISMS.Application.csproj
+++ b/aspnet-core/src/GYISMS.Application/GYISMS.Application.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Abp.Quartz" Version="3.8.1" />
     <PackageReference Include="DotNetCore.NPOI" Version="1.2.1" />
     <PackageReference Include="QRCoder" Version="1.3.3" />
+    <PackageReference Include="Senparc.CO2NET" Version="0.3.0.2" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0004" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0004" />
   </ItemGroup>
