--- a/aspnet-core/src/GYISMS.Web.Host/appsettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/appsettings.json
@@ -1,9 +1,9 @@
 ﻿{
   "ConnectionStrings": {
     //"Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
-    //"Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
+    "Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
     //"Default": "Server=119.23.174.202; Database=GYISMSDB;User ID=sa;Password=qaz_123;"
-    "Default": "Server=10.89.72.45; Database=GYISMSDB;User ID=sa;Password=gywx@db321;"
+    //"Default": "Server=10.89.72.45; Database=GYISMSDB;User ID=sa;Password=gywx@db321;"
   },
   "App": {
     "ServerRootAddress": "http://127.0.0.1:21021/",
