--- a/aspnet-core/src/GYISMS.Web.Host/appsettings.json
+++ b/aspnet-core/src/GYISMS.Web.Host/appsettings.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     //"Default": "Server=localhost; Database=GYISMSDB; Trusted_Connection=True;"
     //"Default": "Server=192.168.1.20; Database=GYISMSDB;User ID=sa;Password=qaz;"
-    "Default": "Server=119.23.174.202; Database=GYISMSDB;User ID=sa;Password=qaz_123;"
-    //"Default": "Server=10.89.72.45; Database=GYISMSDB;User ID=sa;Password=gywx@db321;"
+    //"Default": "Server=119.23.174.202; Database=GYISMSDB;User ID=sa;Password=qaz_123;"
+    "Default": "Server=10.89.72.45; Database=GYISMSDB;User ID=sa;Password=gywx@db321;"
     //"Default": "Server=localhost; Database=GYISMSDB;User ID=sa;Password=qaz;"
     //"Default": "Server=Lenovo-PC; Database=GYBACK; Trusted_Connection=True;"
   },
